Git is mad